fixed bug where app would sometimes crash when navigating to single book view.  Wrapped <BookView3> Component in a div.  Seems to have fixed the issue

--- a/src/less/bookView.less
+++ b/src/less/bookView.less
@@ -120,6 +120,7 @@
     justify-content: center space-evenly;
     bottom: 0;
     background-image: url("https://res.cloudinary.com/ddqp7dojc/image/upload/v1666133015/capstone/111_vyc4kx.jpg");
+    height: 500px;
 }
 
 .view-small-text-page {
